Begin deCOMtamination of central objects by adding inline getters to get from one object to another.  b=208190  r=roc  sr=bzbarsky